app/assets/stylesheets/layout.scss
@import 'bourbon';

@include font-face(norwester, 'norwester/norwester', normal, $asset-pipeline: true);

$red: #ff6f5f;
$black: #4d4d4e;
$green: #42b983;
$gray: #f9f9f9;

html, body {
  padding: 0;
  margin: 0;
}

div, section {
  box-sizing: border-box;
}

#main {
  width: 70%;
  margin: 0 auto;
}

header {
  display: flex;
  margin: 0;
  padding: 15px 60px;
  align-items: center;
  box-shadow: 0 0 4px rgba(0,0,0,0.25);
  flex-direction: row-reverse;

  .fa-rocket {
    font-size: 3em;
  }

  p {
    display: flex;
    align-items: center;
    font-size: 18px;
    text-align: right;
  }

  i {
    cursor: pointer;
    margin: 0 15px;
  }

  .current-user {
    display: flex;
    align-items: center;
    color: $gray;
    background: $black;
    padding: 5px 10px;
    border-radius: 5px;

    i {
      margin-left: 0;
    }

  }

  &.phone {
    justify-content: center;
    font-size: 1.25em;

    .current-user {
      display: none;
    }
  }

}

a {
  color: $black;
  text-decoration: none;
}

body {
  font-family: 'Source sans pro', 'sans serif';
  text-rendering: optimizeLegibility;
  color: $black;

  &.phone {
    font-size: 1.25em;
  }
}

h1, h2, h3 {
  font-family: 'norwester';
}

h1 {
  font-size: 4rem;
  text-transform: uppercase;
  color: $black;
  text-align: center;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-size: 1.5rem;
}

#poll-name {
  width: 100%;
  background-color: transparent;
  border: none;
  border-bottom: 2px solid #ddd;
  outline: none;
  padding-bottom: 5px;
  margin-bottom: 10px;
  font-size: 42px;
  display: block;

  &.error {
    border-bottom: 2px solid red;
  }
  &.disabled {
    opacity: .3;
  }

}

.notice {
  font-family: consolas;
  padding: 12px 24px 12px 30px;
  margin: 2em 0 2em 0.8em;
  border-left: 4px solid $green;
  background-color: #f9f9f9;
  position: relative;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
  box-shadow: 0 1px 1px rgba(0,0,0,0.125);
  cursor: pointer;
  @include transition (all .2s ease-in-out);

  &:hover {
    border: 4px solid $green;
  }

  &.error {
    border-left: 4px solid $red;

    &:before {
      background-color: $red;
    }
  }

  &:before {
    position: absolute;
    top: 50%;
    margin-top: -17px;
    left: -17px;
    background-color: $green;
    color: #fff;
    content: "i";
    width: 30px;
    height: 30px;
    border-radius: 100%;
    text-align: center;
    line-height: 30px;
    font-weight: bold;
    font-family: Georgia;
  }

}

